kubernetes/apps/default/echo/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - "echo.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: echo
          port: 80
